--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "shopify:push": "shopify theme push",
     "vite:dev": "vite",
     "vite:build": "vite build"
+  },
+  "dependencies": {
+    "@alpinejs/collapse": "^3.14.8",
+    "@alpinejs/intersect": "^3.14.8",
+    "@alpinejs/persist": "^3.14.8",
+    "alpinejs": "^3.14.8",
+    "swiper": "^11.2.5"
   }
 }
