--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "type": "module",
   "scripts": {
     "dev": "run-p -sr \"shopify:dev -- {@}\" \"vite:dev\" --",
+    "build": "vite build",
+    "preview": "vite preview",
     "deploy": "run-s \"vite:build\" \"shopify:push -- {@}\" --",
     "shopify:dev": "shopify theme dev",
     "shopify:push": "shopify theme push",
